# telegram_bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260307_0001_initial.py  20260325_0002_server_inbound_ids.py
app/: dependencies.py  main.py
app/api/: app.py  schemas.py
app/api/routes/: internal.py  webhooks.py
app/bot/: app.py  middlewares.py
app/bot/fsm/: states.py
app/bot/handlers/: common.py  subscription.py  support.py  trial.py
app/bot/keyboards/: main_menu.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/domain/: enums.py
app/integrations/: crypto_provider.py  sui_client.py  yookassa_client.py
app/repositories/: billing.py  servers.py  support.py  users.py
app/scheduler/: jobs.py  scheduler.py
app/services/: payment_service.py  subscription_service.py  sui_service.py  support_service.py  trial_service.py
app/support/: ticketing.py
deploy/: entrypoint.sh
deploy/nginx/: nginx.prod.conf  nginx.staging.conf
docs/: RUNBOOK.md  SETUP_PAYMENTS_AND_SUI.md  TEST_CHECKLIST.md
tests/unit/: test_config.py  test_pricing.py
