[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-vpn-bot"
version = "0.1.0"
description = "Production-ready Telegram VPN sales bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7.0,<4.0.0",
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "fastapi>=0.112.0",
  "httpx>=0.27.0",
  "orjson>=3.10.7",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
